--- a/projects/ngx-notification/src/lib/notification-container.scss
+++ b/projects/ngx-notification/src/lib/notification-container.scss
@@ -1,9 +1,9 @@
-.notification-container {
+:host {
     position: fixed;
     top: 10px;
     right: 10px;
-    width: 500px;
-    height: 100px;
-    border-radius: 4px;
-    background-color: #f00;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    text-align: left;
+    color: #fff;
 }
