--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
+    <h1>@tickify/ngx-notification</h1>
     <ngx-notification-container>
     </ngx-notification-container>
     <button (click)="push($event)">push notification</button>
-    <button (click)="remove($event)">remove notification</button>
 </div>
