--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div style="text-align:center">
+<div [ngStyle]="{ 'text-align' : 'center', 'background-image': 'url(' + this.bing + ')'}">
     <h1>@tickify/ngx-notification</h1>
     <ngx-notification-container>
     </ngx-notification-container>
