--- a/projects/ngx-notification/src/lib/notification.scss
+++ b/projects/ngx-notification/src/lib/notification.scss
@@ -1,4 +1,19 @@
 :host {
     display: block;
     margin-bottom: 8px;
+    .aui-message {
+        position: relative;
+        color: #fff;
+        .backdrop {
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            position: absolute;
+            z-index: -1;
+            -webkit-backdrop-filter: blur(10px);
+            backdrop-filter: blur(10px);
+            background-color: rgba(255, 255, 255, 0.3);
+        }
+    }
 }
