--- a/projects/ngx-notification/src/lib/notification.scss
+++ b/projects/ngx-notification/src/lib/notification.scss
@@ -4,6 +4,11 @@
     .aui-message {
         position: relative;
         color: #fff;
+        .aui-icon {
+            &.icon-close {
+                color: #fff;
+            }
+        }
         .backdrop {
             width: 100%;
             height: 100%;
